--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -8,7 +8,7 @@
 
   <body>
     <h1>The Ultimate Reversed String!</h1>
-    <h2><%= @reversed %></h2>
+    <h2><%= @reversed_string %></h2>
 
   </body>
 </html>
